--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -310,7 +310,7 @@
     <!-- PDF DOWNLOAD SECTION -->
     <section id="download">
       <div class="button-row" style="text-align: center; margin-top: 30px;">
-        <a href="whitepaper.pdf" download class="btn">Download PDF</a>
+        <a href="whitepaper_v1.0.pdf" download class="btn">Download PDF</a>
       </div>
     </section>
     <!-- FOOTER -->
