--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -50,7 +50,9 @@
     header img {
       display: block;
       margin: 0 auto 20px auto;
-      max-width: 250px;
+      max-width: 300px;  /* Increased from 250px to 300px */
+      width: 100%;
+      height: auto;
     }
     header h1 {
       font-size: 2.4rem;
@@ -199,7 +201,7 @@
     
     <!-- HEADER WITH LOGO -->
     <header>
-      <img src="images/grate_logo.jpg" alt="$GRATE Logo">
+      <img src="images/grate_logo.png" alt="$GRATE Logo">
       <h1>$GRATE Whitepaper</h1>
       <p class="version">Version 1.0 - February 2025</p>
     </header>
