--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -227,7 +227,7 @@
     
     <!-- HEADER WITH LOGO -->
     <header>
-      <img src="../images/grat_logo.jpg" alt="$GRATE Logo">
+      <img src="../images/grate_logo.jpg" alt="$GRATE Logo">
       <h1>$GRATE Whitepaper</h1>
       <p class="version">Version 1.0 - February 2025</p>
     </header>
