--- a/whitepaper/whitepaper_v1.0_pdf.html
+++ b/whitepaper/whitepaper_v1.0_pdf.html
@@ -191,7 +191,7 @@
   <div class="wrapper">
     <!-- HEADER WITH LOGO -->
     <header>
-      <img src="../images/grat_logo.jpg" alt="$GRATE Logo">
+      <img src="../images/grate_logo.jpg" alt="$GRATE Logo">
       <h1>$GRATE Whitepaper</h1>
       <p class="version">Version 1.0 - February 2025</p>
     </header>
