--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           </a>
         </li>
         <li>
-          <a href="https://t.me/GrateTokenCommunity" target="_blank">
+          <a href="https://t.me/GrateCoin" target="_blank">
             <img src="images/tg.png" alt="Telegram Logo" class="link-logo" />
             Join Telegram
           </a>
