--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -24,9 +24,11 @@
 <body>
   <div class="wrapper">
     <!-- Navigation Button -->
-    <div class="button-row back-btn">
-      <a href="../index.html" class="floating-back-btn">← Back</a>
-    </div>
+<!-- Navigation Button -->
+  <div class="button-row back-btn">
+    <a href="../index.html" class="floating-back-btn">← Back</a>
+  </div>
+
     
     <!-- HEADER WITH LOGO -->
     <header>
