--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -150,10 +150,10 @@
         </div>
         <div class="footer-socials">
           <a href="https://t.me/GrateCoin" target="_blank" rel="noopener noreferrer">
-            <img src="images/tg.png" alt="Telegram Icon" class="link-logo">
+            <img src="..images/tg.png" alt="Telegram Icon" class="link-logo">
           </a>
           <a href="https://x.com/GrateToken" target="_blank" rel="noopener noreferrer">
-            <img src="images/x_logo.png" alt="X Icon" class="link-logo">
+            <img src="..images/x_logo.png" alt="X Icon" class="link-logo">
           </a>
         </div>
       </div>
