--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
       <p>Ready to delve deeper into our vision? Read our official whitepaper to learn more about how $GRATE plans to revolutionize meme-token culture.</p>
       <div class="button-row">
         <a href="whitepaper/" class="btn">Read Whitepaper</a>
-        <button class="btn share-btn" onclick="shareWhitepaperMain()">🔗 Share</button>
+        <!-- Updated share button using a generic up arrow icon -->
+        <button class="btn share-btn" onclick="shareWhitepaperMain()">↑ Share</button>
       </div>
     </section>
     
@@ -153,7 +154,7 @@
         </a>
         <a href="https://x.com/GrateToken" target="_blank" rel="noopener noreferrer">
           <img src="images/x_logo.png" alt="X Icon" class="link-logo">
-          X
+          <!-- Removed the extra text so that only the icon shows -->
         </a>
       </div>
     </section>
