--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://gratetoken.com/whitepaper/" />
   <meta property="og:image" content="https://gratetoken.com/images/grate_logo.jpg" />
   <!-- Favicon -->
-  <link rel="icon" href="../images/grate_logo.jpg" type="image/jpg">
+  <link rel="icon" href="../images/grate_logo.jpg" type="image/jpeg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
@@ -129,7 +129,8 @@
     <section id="actions">
       <div class="button-row">
         <a href="whitepaper_v1.0.pdf" download class="btn">📥 Download PDF</a>
-        <button class="btn share-btn" onclick="shareWhitepaper()">🔗 Share</button>
+        <!-- Updated share button using a generic up arrow icon -->
+        <button class="btn share-btn" onclick="shareWhitepaperMain()">↑ Share</button>
       </div>
     </section>
     
@@ -150,10 +151,10 @@
         </div>
         <div class="footer-socials">
           <a href="https://t.me/GrateCoin" target="_blank" rel="noopener noreferrer">
-            <img src="..images/tg.png" alt="Telegram Icon" class="link-logo">
+            <img src="../images/tg.png" alt="Telegram Icon" class="link-logo">
           </a>
           <a href="https://x.com/GrateToken" target="_blank" rel="noopener noreferrer">
-            <img src="..images/x_logo.png" alt="X Icon" class="link-logo">
+            <img src="../images/x_logo.png" alt="X Icon" class="link-logo">
           </a>
         </div>
       </div>
