--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -23,10 +23,10 @@
     <!-- Navbar (Shared) -->
     <nav class="navbar" aria-label="Main Navigation">
       <div class="navbar-container">
-        <a class="navbar-brand" href="../index.html">$GRATE</a>
+        <a class="navbar-brand" href="../">$GRATE</a>
         <div class="navbar-right">
           <ul class="nav-menu">
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../">Home</a></li>
             <li><a href="index.html">Whitepaper</a></li>
           </ul>
           <ul class="nav-icons">
@@ -129,7 +129,6 @@
     <section id="actions">
       <div class="button-row">
         <a href="whitepaper_v1.0.pdf" download class="btn">📥 Download PDF</a>
-        <!-- Updated share button using a generic up arrow icon -->
         <button class="btn share-btn" onclick="shareWhitepaperMain()">↑ Share</button>
       </div>
     </section>
@@ -137,7 +136,7 @@
     <!-- Footer (Unified for all pages) -->
     <footer class="footer">
       <div class="footer-quicklinks">
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <a href="whitepaper/">Whitepaper</a>
         <a href="#introduction">Introduction</a>
         <a href="#token-overview">Token Overview</a>
