--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <!-- Navbar (Shared) -->
   <nav class="navbar" aria-label="Main Navigation">
     <div class="navbar-container">
-      <a class="navbar-brand" href="index.html">$GRATE</a>
+      <a class="navbar-brand" href="/">$GRATE</a>
       <div class="navbar-right">
         <ul class="nav-menu">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="whitepaper/">Whitepaper</a></li>
         </ul>
         <ul class="nav-icons">
@@ -140,7 +140,6 @@
       <p>Ready to delve deeper into our vision? Read our official whitepaper to learn more about how $GRATE plans to revolutionize meme-token culture.</p>
       <div class="button-row">
         <a href="whitepaper/" class="btn">Read Whitepaper</a>
-        <!-- Updated share button using a generic up arrow icon -->
         <button class="btn share-btn" onclick="shareWhitepaperMain()">↑ Share</button>
       </div>
     </section>
@@ -154,7 +153,7 @@
         </a>
         <a href="https://x.com/GrateToken" target="_blank" rel="noopener noreferrer">
           <img src="images/x_logo.png" alt="X Icon" class="link-logo">
-          <!-- Removed the extra text so that only the icon shows -->
+          <!-- No extra text here -->
         </a>
       </div>
     </section>
@@ -163,7 +162,7 @@
   <!-- Footer (Unified for all pages) -->
   <footer class="footer">
     <div class="footer-quicklinks">
-      <a href="index.html">Home</a>
+      <a href="/">Home</a>
       <a href="whitepaper/">Whitepaper</a>
       <a href="#introduction">Introduction</a>
       <a href="#token-overview">Token Overview</a>
